--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 # Site settings
 title: Pokemon Index 
 description: A simple web page created for the purpose of testing. 
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 # Build settings
 markdown: kramdown
